--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "prediction-market-decision-making",
+  "name": "prediction-markets",
   "author": "Placeholder-author",
   "description": "An application for Aragon",
   "details_url": "/meta/details.md",
