--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "publish:major": "buidler publish major",
         "publish:minor": "buidler publish minor",
         "publish:patch": "buidler publish patch",
-        "lint:code": "eslint \"src/**/*.js\"",
-        "lint:prettier": "prettier -l src/**/*.js",
+        "lint:code": "eslint",
+        "lint:prettier": "prettier -l",
         "lint:commit-message": "commitlint -e",
         "lint": "yarn lint:code && yarn lint:prettier"
     },
@@ -31,6 +31,9 @@
         "@nomiclabs/buidler-etherscan": "^1.3.0",
         "@nomiclabs/buidler-truffle5": "^1.3.0",
         "@nomiclabs/buidler-web3": "^1.3.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.5.0",
+        "husky": "^4.2.5",
         "prettier": "^2.0.5",
         "web3": "^1.2.0"
     }
