--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,25 @@
     "extends": ["eslint:recommended"],
     "env": {
         "node": true,
-        "es6": true
-    }
+        "es6": true,
+        "mocha": true
+    },
+    "overrides": [
+        {
+            "files": ["app/**/*.js", "app/**/*.jsx"],
+            "plugins": ["react"],
+            "env": {
+                "browser": true
+            },
+            "parserOptions": {
+                "ecmaFeatures": {
+                    "jsx": true
+                }
+            },
+            "rules": {
+                "react/jsx-uses-react": "error",
+                "react/jsx-uses-vars": "error"
+            }
+        }
+    ]
 }
