--- a/app/package.json
+++ b/app/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "prediction-markets-frontend",
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "dependencies": {
-    "@aragon/api": "^2.0.0-beta.9",
-    "@aragon/api-react": "^2.0.0-beta.9",
-    "@aragon/ui": "^1.4.2",
-    "core-js": "^3.6.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "regenerator-runtime": "^0.13.5",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "copyfiles": "^2.2.0",
-    "parcel-bundler": "^1.12.4"
-  },
-  "scripts": {
-    "build": "yarn sync-assets && yarn build:app && yarn build:script",
-    "build:app": "parcel build index.html -d ../dist/ --public-url \".\" --no-cache",
-    "build:script": "parcel build src/script.js --out-dir ../dist/ --no-cache",
-    "watch:script": "parcel watch src/script.js --out-dir ../dist/ --no-hmr",
-    "serve": "parcel serve index.html --out-dir ../dist/ --no-cache",
-    "watch": "yarn watch:script",
-    "sync-assets": "copy-aragon-ui-assets ../dist && copyfiles -u 1 './public/**/*' ../dist",
-    "start": "yarn sync-assets && yarn watch:script & yarn serve"
-  }
+    "name": "prediction-markets-frontend",
+    "version": "1.0.0",
+    "main": "src/index.js",
+    "dependencies": {
+        "@aragon/api": "^2.0.0-beta.9",
+        "@aragon/api-react": "^2.0.0-beta.9",
+        "@aragon/ui": "^1.4.2",
+        "bignumber.js": "^9.0.0",
+        "core-js": "^3.6.5",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "reflexbox": "^4.0.6",
+        "regenerator-runtime": "^0.13.5",
+        "styled-components": "^5.1.1",
+        "web3-utils": "^1.2.11"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.10.2",
+        "@babel/preset-env": "^7.10.2",
+        "copyfiles": "^2.2.0",
+        "parcel-bundler": "^1.12.4"
+    },
+    "scripts": {
+        "build": "yarn sync-assets && yarn build:app && yarn build:script",
+        "build:app": "parcel build index.html -d ../dist/ --public-url \".\" --no-cache",
+        "build:script": "parcel build src/script.js --out-dir ../dist/ --no-cache",
+        "watch:script": "parcel watch src/script.js --out-dir ../dist/ --no-hmr",
+        "serve": "parcel serve index.html --out-dir ../dist/ --no-cache",
+        "watch": "yarn watch:script",
+        "sync-assets": "copy-aragon-ui-assets ../dist && copyfiles -u 1 './public/**/*' ../dist",
+        "start": "yarn sync-assets && yarn watch:script & yarn serve"
+    }
 }
