--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-  "name": "prediction-markets",
-  "author": "Placeholder-author",
-  "description": "An application for Aragon",
-  "details_url": "/meta/details.md",
-  "source_url": "https://<placeholder-repository-url>",
-  "icons": [
-    {
-      "src": "/meta/icon.svg",
-      "sizes": "56x56"
-    }
-  ],
-  "screenshots": [{ "src": "/meta/screenshot-1.png" }],
-  "start_url": "/index.html",
-  "script": "/script.js"
+    "name": "Prediction markets",
+    "author": "Placeholder-author",
+    "description": "An application for Aragon",
+    "details_url": "/meta/details.md",
+    "source_url": "https://<placeholder-repository-url>",
+    "icons": [
+        {
+            "src": "/meta/icon.svg",
+            "sizes": "56x56"
+        }
+    ],
+    "screenshots": [{ "src": "/meta/screenshot-1.png" }],
+    "start_url": "/index.html",
+    "script": "/script.js"
 }
