--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "scripts": {
         "postinstall": "yarn compile && yarn build-app",
         "build-app": "cd app && npm install && cd ..",
-        "compile": "buidler compile --force",
+        "compile": "buidler compile --force && buidler compile --config buidler.config.5.js",
         "test": "buidler test --network buidlerevm",
-        "start": "buidler start",
+        "start": "buidler compile && buidler start",
         "publish:major": "buidler publish major",
         "publish:minor": "buidler publish minor",
         "publish:patch": "buidler publish patch",
-        "lint:code": "eslint",
+        "lint:code": "eslint .",
         "lint:prettier": "prettier -l",
         "lint:commit-message": "commitlint -e",
         "lint": "yarn lint:code && yarn lint:prettier"
     },
     "dependencies": {
-        "@aragon/os": "^4.4.0"
+        "@aragon/os": "^4.4.0",
+        "@gnosis.pm/conditional-tokens-contracts": "^1.0.1",
+        "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1"
     },
     "devDependencies": {
         "@aragon/buidler-aragon": "^0.2.0",
@@ -33,6 +35,7 @@
         "@nomiclabs/buidler-web3": "^1.3.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^7.5.0",
+        "eslint-plugin-react": "^7.20.3",
         "husky": "^4.2.5",
         "prettier": "^2.0.5",
         "web3": "^1.2.0"
