--- a/app/package.json
+++ b/app/package.json
@@ -3,22 +3,24 @@
     "version": "1.0.0",
     "main": "src/index.js",
     "dependencies": {
-        "@aragon/api": "^2.0.0-beta.9",
-        "@aragon/api-react": "^2.0.0-beta.9",
+        "@aragon/api": "^2.0.0",
+        "@aragon/api-react": "^2.0.0",
         "@aragon/ui": "^1.4.2",
         "bignumber.js": "^9.0.0",
         "core-js": "^3.6.5",
+        "luxon": "^1.24.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-spring": "^8.0.27",
         "reflexbox": "^4.0.6",
-        "regenerator-runtime": "^0.13.5",
+        "regenerator-runtime": "^0.13.7",
         "styled-components": "^5.1.1",
         "web3-utils": "^1.2.11"
     },
     "devDependencies": {
         "@babel/core": "^7.10.2",
         "@babel/preset-env": "^7.10.2",
-        "copyfiles": "^2.2.0",
+        "copyfiles": "^2.3.0",
         "parcel-bundler": "^1.12.4"
     },
     "scripts": {
