--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "dependencies": {
         "@aragon/os": "^4.4.0",
         "@gnosis.pm/conditional-tokens-contracts": "^1.0.1",
-        "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1"
+        "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1",
+        "canonical-weth": "^1.4.0"
     },
     "devDependencies": {
-        "@aragon/buidler-aragon": "^0.2.0",
+        "@aragon/buidler-aragon": "^0.2.9",
         "@aragon/contract-test-helpers": "0.0.1",
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-conventional": "^9.1.1",
-        "@nomiclabs/buidler": "^1.3.0",
+        "@nomiclabs/buidler": "^1.3.8",
         "@nomiclabs/buidler-etherscan": "^1.3.0",
         "@nomiclabs/buidler-truffle5": "^1.3.0",
         "@nomiclabs/buidler-web3": "^1.3.0",
@@ -38,6 +39,6 @@
         "eslint-plugin-react": "^7.20.3",
         "husky": "^4.2.5",
         "prettier": "^2.0.5",
-        "web3": "^1.2.0"
+        "web3": "^1.2.11"
     }
 }
