feat: implement various features

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "overrides": [
         {
             "files": ["app/**/*.js", "app/**/*.jsx"],
-            "plugins": ["react"],
+            "plugins": ["react", "react-hooks"],
             "env": {
                 "browser": true
             },
@@ -20,7 +20,9 @@
             },
             "rules": {
                 "react/jsx-uses-react": "error",
-                "react/jsx-uses-vars": "error"
+                "react/jsx-uses-vars": "error",
+                "react-hooks/rules-of-hooks": "error",
+                "react-hooks/exhaustive-deps": "warn"
             }
         }
     ]
