--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "babel-eslint": "^10.1.0",
         "eslint": "^7.5.0",
         "eslint-plugin-react": "^7.20.3",
+        "eslint-plugin-react-hooks": "^4.0.8",
         "husky": "^4.2.5",
         "prettier": "^2.0.5",
         "web3": "^1.2.11"
