--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
         "luxon": "^1.24.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-router-dom": "^5.2.0",
         "react-spring": "^8.0.27",
         "reflexbox": "^4.0.6",
         "regenerator-runtime": "^0.13.7",
