--- a/arapp.json
+++ b/arapp.json
@@ -18,22 +18,22 @@
     ],
     "environments": {
         "default": {
-            "appName": "futarchy.aragonpm.eth",
+            "appName": "futarchy-pm.aragonpm.eth",
             "network": "rpc"
         },
         "rinkeby": {
             "registry": "0x98df287b6c145399aaa709692c8d308357bc085d",
-            "appName": "futarchy.open.aragonpm.eth",
+            "appName": "futarchy-pm.open.aragonpm.eth",
             "network": "rinkeby"
         },
         "staging": {
-            "registry": "0xfe03625ea880a8cba336f9b5ad6e15b0a3b5a939",
-            "appName": "futarchy.open.aragonpm.eth",
+            "registry": "0x98df287b6c145399aaa709692c8d308357bc085d",
+            "appName": "futarchy-pm.open.aragonpm.eth",
             "network": "rinkeby"
         },
         "mainnet": {
             "registry": "0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e",
-            "appName": "futarchy.aragonpm.eth",
+            "appName": "futarchy-pm.aragonpm.eth",
             "network": "mainnet"
         }
     },
