--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "lint:code": "eslint .",
         "lint:prettier": "prettier -l .",
         "lint:commit-message": "commitlint -e",
-        "lint": "yarn lint:code && yarn lint:prettier"
+        "lint": "yarn lint:code && yarn lint:prettier",
+        "rinkeby:install": "dao install 0xD6Cca574888A4DEE416087A594A02A9C52ab880c futarchy-pm.open.aragonpm.eth --environment rinkeby --app-init-args 0x36bede640D19981A82090519bC1626249984c908 0x03Ce050DAEB28021086Bf8e9B7843d6212c05F7B 0xc778417E063141139Fce010982780140Aa0cD5Ab"
     },
     "dependencies": {
         "@aragon/os": "^4.4.0",
@@ -27,6 +28,7 @@
     },
     "devDependencies": {
         "@aragon/buidler-aragon": "^0.2.9",
+        "@aragon/cli": "^7.1.6",
         "@aragon/contract-test-helpers": "0.0.1",
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-conventional": "^11.0.0",
@@ -34,7 +36,9 @@
         "@nomiclabs/buidler-etherscan": "^1.3.0",
         "@nomiclabs/buidler-truffle5": "^1.3.0",
         "@nomiclabs/buidler-web3": "^1.3.0",
+        "@truffle/hdwallet-provider": "^1.1.1",
         "babel-eslint": "^10.1.0",
+        "dotenv": "^8.2.0",
         "eslint": "^7.9.0",
         "eslint-plugin-react": "^7.20.6",
         "eslint-plugin-react-hooks": "^4.1.2",
