feat: new dao instance on rinkeby in package json

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "lint": "yarn lint:code && yarn lint:prettier",
         "app:verify-initialization-parameters": "node ./scripts/initialization-check",
         "apm:versions": "aragon apm versions",
-        "rinkeby:install": "dao install 0x1c2511B07A9808beE6aF6d476C70275c7A419AD9 futarchy-pm.open.aragonpm.eth --environment rinkeby --app-init-args 0x36bede640D19981A82090519bC1626249984c908 0x03Ce050DAEB28021086Bf8e9B7843d6212c05F7B 0xc778417E063141139Fce010982780140Aa0cD5Ab 0x3D00D77ee771405628a4bA4913175EcC095538da 0xcafa054b1b054581faf65adce667bf1c684b6ef0 --set-permissions open",
-        "rinkeby:upgrade": "dao upgrade 0x1c2511B07A9808beE6aF6d476C70275c7A419AD9 futarchy-pm.open.aragonpm.eth --environment rinkeby"
+        "rinkeby:install": "dao install 0x8Ca5149349e33B8C9Ab739FEa47b024FE716957C futarchy-ctf.open.aragonpm.eth --environment rinkeby --app-init-args 0x36bede640D19981A82090519bC1626249984c908 0x03Ce050DAEB28021086Bf8e9B7843d6212c05F7B 0xc778417E063141139Fce010982780140Aa0cD5Ab 0x3D00D77ee771405628a4bA4913175EcC095538da 0xcafa054b1b054581faf65adce667bf1c684b6ef0 --set-permissions open",
+        "rinkeby:upgrade": "dao upgrade 0x8Ca5149349e33B8C9Ab739FEa47b024FE716957C futarchy-ctf.open.aragonpm.eth --environment rinkeby"
     },
     "devDependencies": {
         "@aragon/buidler-aragon": "^0.2.9",
