--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@nomiclabs/buidler-etherscan": "^1.3.0",
         "@nomiclabs/buidler-truffle5": "^1.3.0",
         "@nomiclabs/buidler-web3": "^1.3.0",
+        "@realitio/realitio-contracts": "^2.2.3",
         "@truffle/hdwallet-provider": "^1.1.1",
         "babel-eslint": "^10.1.0",
         "canonical-weth": "^1.4.0",
