--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "scripts": {
         "postinstall": "yarn compile && yarn build-app",
         "build-app": "cd app && npm install && cd ..",
-        "compile": "buidler compile --force && buidler compile --config buidler.config.5.js",
-        "test": "buidler test --network buidlerevm",
-        "start": "buidler compile && buidler start",
+        "compile": "buidler compile --force && buidler compile --config buidler.config.5.js && buidler compile --config buidler.config.6.js",
+        "test": "yarn test --network buidlerevm",
+        "start": "yarn compile && buidler start",
         "publish:major": "buidler publish major",
         "publish:minor": "buidler publish minor",
         "publish:patch": "buidler publish patch",
@@ -36,6 +36,7 @@
         "@nomiclabs/buidler-etherscan": "^1.3.0",
         "@nomiclabs/buidler-truffle5": "^1.3.0",
         "@nomiclabs/buidler-web3": "^1.3.0",
+        "@openzeppelin/contracts": "^3.3.0",
         "@realitio/realitio-contracts": "^2.2.3",
         "@truffle/hdwallet-provider": "^1.1.1",
         "babel-eslint": "^10.1.0",
